--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .DS_Store
 node_modules/
 /dist/
+build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+package-lock.json
 # Editor directories and files
 .idea
 .vscode
